--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   "keywords": [],
   "author": "ProducePay",
   "license": "ISC",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  }
+  "dependencies": {}
 }
